<resources>
    <string name="app_name">AirCard</string>
    <string name="button_clear_log">Clear log</string>
    <string name="title_activity_nearby_cards">NearbyCardsActivity</string>
    <string name="card_action_save">Save card</string>
    <string name="card_click_message">Card clicked</string>
    <string name="error_intent_email">No email app installed</string>
    <string name="error_intent_tel">No phone app installed</string>
    <string name="error_intent_location">No maps app installed</string>
    <string name="error_intent_location_invalid">Failed to open invalid address</string>
    <string name="title_activity_saved_cards">SavedCardsActivity</string>
    <string name="message_card_saved">Card saved</string>
    <string name="error_delete_saved_card">Failed to delete saved card</string>
    <string name="title_activity_my_cards">MyCardsActivity</string>
    <string name="menu_item_create_new_card">Create new card</string>
    <string name="card_color_default">Default</string>
    <string name="card_color_yellow">Yellow</string>
    <string name="card_color_orange">Orange</string>
    <string name="card_color_red">Red</string>
    <string name="card_style_default">Default</string>
    <string name="card_style_monospace">Monospace</string>
    <string name="card_style_serif">Serif</string>
    <string name="tab_title_my_cards">My cards</string>
    <string name="tab_title_nearby_cards">Nearby</string>
    <string name="tab_title_saved_cards">Saved</string>
    <string name="card_edit_auto_fill">Auto fill</string>
    <string name="auto_fill_error">Failed to get user info.</string>
    <string name="menu_item_demo_cards">Demo cards</string>
    <string name="menu_item_search">Search</string>
    <string name="error_network">Network error</string>
    <string name="error_publish">Failed to publish card</string>
    <string name="error_api_not_connected">Could not connect to Nearby API</string>
    <string name="error_unpublish">Failed to unpublish card</string>
    <string name="error_subscribe">Failed to subscribe</string>
    <string name="error_search">Failed to perform search</string>
    <string name="error_get_saved_cards">Failed to get saved cards</string>
    <string name="error_save_card">Failed to save card</string>
    <string name="error_delete_my_card">Failed to delete card</string>
    <string name="error_create_new_card">Failed to create new card</string>
    <string name="error_my_card_color">Failed to set card color</string>
    <string name="error_my_card_style">Failed to set card style</string>
    <string name="error_my_card_edit">Failed to edit card</string>
    <string name="nearby_demo_cards_subscribed">Discover is already in progress</string>
    <string name="empty_view_my_cards">Tap to create a new card</string>
    <string name="empty_view_nearby_disabled">Tap the button below to see nearby cards</string>
    <string name="empty_view_nearby_searching">Searching for nearby cards…</string>
    <string name="empty_view_saved">You can save nearby cards for later here</string>
    <string name="empty_view_saved_searching">No results</string>
    <string name="card_edit_invalid_name">Name is required</string>
    <string name="error_get_my_cards">Failed to display cards</string>
</resources>
